--- a/TriangleBackgroundView/app/src/main/res/layout/activity_main.xml
+++ b/TriangleBackgroundView/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="20dp"
+        android:textColor="@android:color/white"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
